<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_1"
    tools:context=".GuestDetail" >

	<TextView
	    android:id="@+id/guest_detail_1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	   	android:layout_marginTop="20dp"
	    android:text="@string/guest_detail1"
	    android:textColor="@color/white2"
	    android:textSize="24sp"
	    android:textStyle="bold" />
	
	<TextView
	    android:id="@+id/guest_detail_2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="60dp"
	    android:text="@string/guest_detail2"
	    android:textColor="@color/white2"
	    android:textSize="24sp"
	    android:textStyle="italic" />
    
	<TextView
	    android:id="@+id/guest_detail_3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="100dp"
	    android:layout_centerHorizontal="true"
	    android:text="@string/guest_detail3"
	    android:textColor="@color/white2"
	    android:textSize="24sp"
	    android:textStyle="italic" />

	<TextView
	    android:id="@+id/guest_detail_4"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="150dp"
	    android:text="@string/guest_detail4"
	    android:textColor="@color/white2"
	    android:textSize="30sp"
	    android:textStyle="bold" />
	
	<ImageButton
	    android:id="@+id/back"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignTop="@+id/home"
	    android:layout_marginLeft="150dp"
	    android:background="@android:color/transparent"
	    android:contentDescription="@string/app_name"
	    android:src="@drawable/back_button" />
	
	<ImageButton
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_toRightOf="@+id/back"
	    android:layout_alignParentBottom="true"
	    android:layout_marginStart="100dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/home_button" />

</RelativeLayout>