<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableLookup"
    android:background="@drawable/bg_1">

    <TextView
	    android:id="@+id/firstname_text"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="15dp"
	    android:layout_marginTop="10dp"
	    android:text="@string/firstname_prompt2"
	    android:textColor="@color/white2"
	    android:textSize="18sp" >
	</TextView>
	
    <EditText
	    android:id="@+id/firstname_input"
	    android:layout_width="200dp"
	    android:layout_height="30dp"
	    android:layout_marginLeft="180dp"
	    android:layout_marginTop="5dp"
	    android:background="@drawable/textfield1"
	    android:textColor="@color/black"
	    android:maxLength="20"
	    android:inputType="textCapSentences"
	    android:selectAllOnFocus="true"
	    android:textSize="22sp" />
    
    <TextView
	    android:id="@+id/lastname_text"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="15dp"
	    android:layout_marginTop="50dp"
	    android:text="@string/lastname_prompt2"
	    android:textColor="@color/white2"
	    android:textSize="18sp" >
	</TextView>
	
    <EditText
	    android:id="@+id/lastname_input"
	    android:layout_width="200dp"
	    android:layout_height="30dp"
	    android:layout_marginLeft="180dp"
	    android:layout_marginTop="45dp"
	    android:background="@drawable/textfield1"
	    android:textColor="@color/black"
		android:inputType="textCapSentences"
	    android:maxLength="20"
	    android:selectAllOnFocus="true"
	    android:textSize="22sp" />
    
     <TextView
	    android:id="@+id/no_guest_text"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="15dp"
	    android:layout_marginTop="90dp"
	    android:text="@string/no_guest_prompt2"
	    android:textColor="@color/white2"
	    android:textSize="18sp" >
	</TextView>
	
    <EditText
	    android:id="@+id/no_guest_input"
	    android:layout_width="100dp"
	    android:layout_height="30dp"
	    android:layout_marginLeft="180dp"
	    android:layout_marginTop="85dp"
	    android:background="@drawable/textfield1"
	    android:textColor="@color/black"
	    android:inputType="number"
	    android:maxLength="2"
	    android:selectAllOnFocus="true"
	    android:textSize="22sp" />
    
     <TextView
	    android:id="@+id/table_no_text"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="15dp"
	    android:layout_marginTop="130dp"
	    android:text="@string/table_no_prompt2"
	    android:textColor="@color/white2"
	    android:textSize="18sp" >
	</TextView>
	
    <EditText
	    android:id="@+id/table_no_input"
	    android:layout_width="100dp"
	    android:layout_height="30dp"
	    android:layout_marginLeft="180dp"
	    android:layout_marginTop="125dp"
	    android:background="@drawable/textfield1"
	    android:textColor="@color/black"
	    android:inputType="number"
	    android:maxLength="2"
	    android:selectAllOnFocus="true"
	    android:textSize="22sp" />

	<ImageButton
	    android:id="@+id/add_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/back_button"
	    android:layout_alignBottom="@+id/back_button"
	    android:layout_centerHorizontal="true"
	    android:contentDescription="@string/app_name"
	    android:background="@drawable/add_button" />

	<ImageButton
	    android:id="@+id/back_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/table_no_text"
	    android:layout_below="@+id/table_no_input"
	    android:layout_marginLeft="33dp"
	    android:layout_marginTop="31dp"
	    android:contentDescription="@string/app_name"
	    android:background="@drawable/back_button" />

	<TextView
	    android:id="@+id/add_guest_confirm"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_marginBottom="20dp"
	    android:text="@string/add_guest_confirm"
	    android:textColor="@color/red1"
	    android:layout_marginLeft="50dp"
	    android:textSize="18sp"
	    android:visibility="invisible"
	    android:textStyle="bold|italic" />

	<com.naturecode.turtledove.utils.ResizableImageView
	    android:id="@+id/right_panel"
	    android:layout_width="200dp"
	    android:layout_height="510dp"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:contentDescription="@string/add_guest"
	    android:src="@drawable/right_panel1" />

</RelativeLayout>	