<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_1"
    tools:context=".TableLookup" >

    <TextView
        android:id="@+id/firstname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/firstname_prompt1"
        android:textColor="@color/white2"
        android:textSize="24sp" >
    </TextView>

    <EditText
        android:id="@+id/firstname_input"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/textfield1"
        android:inputType="textCapSentences"
        android:maxLength="20"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/lastname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="85dp"
        android:text="@string/lastname_prompt1"
        android:textColor="@color/white2"
        android:textSize="24sp" >
    </TextView>

    <EditText
        android:id="@+id/lastname_input"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/textfield1"
        android:inputType="textCapSentences"
        android:maxLength="20"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <ImageButton
        android:id="@+id/submit_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginLeft="660dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/submit_button"
        android:contentDescription="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold" >
    </ImageButton>

    <com.naturecode.turtledove.utils.ResizableImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/thumbnail1"
        android:src="@drawable/footer" />

</RelativeLayout>